<resources>
    <string name="app_name">Intelligent guess</string>
    <string name="title_activity_fullscreen">""</string>
    <string name="title_activity_login">Zaloguj się</string>
    <string name="prompt_email">Login</string>
    <string name="prompt_password">Hasło</string>
    <string name="action_sign_in">Zaloguj się</string>
    <string name="action_sign_in_short">Zaloguj się</string>
    <string name="welcome">"Witaj, "</string>
    <string name="invalid_username">Nieprawidłowa nazwa użytkownika</string>
    <string name="invalid_password">Hasło musi mieć przynajmniej 1 znak</string>
    <string name="login_failed">"Logowanie nieudane"</string>
    <string name="wrong_password">Błędne hasło</string>
    <string name="login_error">Błąd logowania</string>
    <string name="warning_fill_form">Najpierw wypełnij formularz</string>
    <string name="register">Zarejestruj się</string>
    <string name="wrong_login">Błędny login. By stworzyć nowego użytkownika, naciśnij przycisk \'Zarejestruj się\'</string>
</resources>